# sched

./: Cargo.toml  README.md  lookup.csv  online.csv  special.csv  start.sh
.github/workflows/: rust.yml
src/: blocks.rs  main.rs  sched_classes.csv  sched_data.csv  sched_data_11.csv  stat.rs
templates/: sched.html.tera  silly.html.tera
