[package]
name = "sched"
version = "0.1.0"
authors = ["xytk4 <ravi.jov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.19"
csv = "1.1"
rand = "0.8.3"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]
